{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 38,
  "lineage": "50e2e9f3-a7b9-55da-3e91-f16f7be28780",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Private_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:security-group/sg-06796bd3dc5378e32",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06796bd3dc5378e32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250323081507333000000002",
            "name_prefix": "terraform-",
            "owner_id": "539935451710",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f49a4c5e9ab16175"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.kasi_hcl_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Public_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:security-group/sg-0897bb761fc2aa54b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0897bb761fc2aa54b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250323081507333500000003",
            "name_prefix": "terraform-",
            "owner_id": "539935451710",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f49a4c5e9ab16175"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.kasi_hcl_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hcl_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:subnet/subnet-0ee39771613a295ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee39771613a295ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539935451710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hcl_private_subnet"
            },
            "tags_all": {
              "Name": "hcl_private_subnet"
            },
            "vpc_id": "vpc-0f49a4c5e9ab16175"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kasi_hcl_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hcl_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:subnet/subnet-08485865b3ee8616d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08485865b3ee8616d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539935451710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hcl_public_subnet"
            },
            "tags_all": {
              "Name": "hcl_public_subnet"
            },
            "vpc_id": "vpc-0f49a4c5e9ab16175"
          },
          "dependencies": [
            "module.vpc.aws_vpc.kasi_hcl_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kasi_hcl_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539935451710:vpc/vpc-0f49a4c5e9ab16175",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e3bdf055d3330095",
            "default_route_table_id": "rtb-071d07cbc5e33448b",
            "default_security_group_id": "sg-015c10b019c9c6414",
            "dhcp_options_id": "dopt-09069672",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f49a4c5e9ab16175",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071d07cbc5e33448b",
            "owner_id": "539935451710",
            "tags": {
              "Name": "kasi_hcl_vpc"
            },
            "tags_all": {
              "Name": "kasi_hcl_vpc"
            }
          }
        }
      ]
    }
  ]
}